<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_detail_title">Detail Activity</string>

    <string name="pref_default_location" translatable="false">94043</string>
    <string name="pref_key_location" translatable="false">location</string>
    <string name="pref_label_location">Location</string>

    <string name="pref_location_hint">Enter City Name or Postal Code</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>


    <!-- xliff tag is added to ensure that the string could not be translated and to format strings, xliff should always have an id in order to tell what the xliff tag is for-->
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
        <!-- Wind in mph [CHAR LIMIT=25] -->
        <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
        <!-- Wind in kph [CHAR LIMIT=25] -->
        <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

        <!-- Pressure format CHAR LIMIT=25] -->
        <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

        <!-- Humidity format CHAR LIMIT=25]-->
        <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <string name="temp_title">Temperature Units</string>

    <string name="listPref_default_label" translatable="false">Metric</string>
    <string name="listPref_imperial_label" translatable="false">Imperial</string>

    <string name="listPref_key" translatable="false">units</string>
    <string name="listPref_default" translatable="false">metric</string>
    <string name="listPref_imperial" translatable="false">imperial</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">weather.example.com</string>
    <string name="content_authority">com.example.tarunkukreja.weather</string>

    <!-- Notification Format -->
    <string name="notification_format">Forecast: <xliff:g id = "condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Disabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


</resources>
