<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height="match_parent">


    <EditTextPreference
        android:title="@string/pref_label_location"
        android:id="@+id/editTextPrefernce"
        android:key="@string/pref_key_location"
        android:defaultValue="@string/pref_default_location"
        android:inputType="text"
        android:hint="@string/pref_location_hint"
        android:singleLine="true"/>

    <ListPreference
        android:entries="@array/Temperature"
        android:entryValues="@array/TemperatureValues"
        android:title="@string/temp_title"
        android:key="@string/listPref_key"
        android:defaultValue="@string/listPref_default"
        />



</PreferenceScreen>